--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -16,8 +16,10 @@
                 </li>
             </ul>
 
-            <button (click)="checkOut()"  *ngIf="this.user.usuario_id" (click)="cerrarCarrito2()"  class="arrow-button">Hacer pedido</button>
-            <button (click)="abrirLogin.emit(true)" (click)="cerrarCarrito2()"   *ngIf="this.user.length === 0" class="arrow-button">Inicia sesión para hacer tu compra</button>
+            <button (click)="checkOut()" *ngIf="this.user.usuario_id" (click)="cerrarCarrito2()"
+                class="checkout-button">Hacer pedido</button>
+            <button (click)="abrirLogin.emit(true)" (click)="cerrarCarrito2()" *ngIf="this.user.length === 0"
+                class="checkout-button">Inicia sesión para realizar tu compra</button>
 
         </div>
     </div>
