--- a/src/app/pages/checkout/checkout-resumen-pedido/checkout-resumen-pedido.component.html
+++ b/src/app/pages/checkout/checkout-resumen-pedido/checkout-resumen-pedido.component.html
@@ -10,7 +10,7 @@
         </div>
       </li>
       <li class="list-group-item total">
-        <!-- <span>Total: {{ carritoTotal }}€</span> -->
+        <span>Total: {{ carritoTotal }}€</span>
       </li>
     </ul>
 
