--- a/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.html
+++ b/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.html
@@ -7,9 +7,9 @@
         con los últimos avances científicos gracias a nuestro laboratorio con 30 años de experiencia especializado en
         dermocosmética.
       </h3>
-      <h4>Los principios activos son los ingredientes responsables de cumplir la función especñífica en la piel para la
-        que están destinados</h4>
-      <h4 class="italic">¡Descube los ingredientes activos que utilizamos!</h4>
+      <h3>Los principios activos son los ingredientes responsables de cumplir la función especñífica en la piel para la
+        que están destinados</h3>
+      <h3 class="italic">¡Descube los ingredientes activos que utilizamos!</h3>
 
     </div>
   </div>
@@ -20,127 +20,142 @@
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-        
+
           Hacen que tu piel esté más tersa y suave, relaja las durezas y tiene propiedades antiinflamatorias y
           cicatrizantes, revitalizando la piel agredida y sensible
         </div>
-       
-        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 7.png' />
-        <h4>CALENDULA</h4>
+
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 7.png' />
+        <h3>CALENDULA</h3>
       </div>
     </div>
 
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-          
-          Tiene propiedades calmantes, reparadoras, antiinflamatorias y antimicrobianas. Es eficaz para calmar las irritaciones de las pieles sensibles y reactivas, aliviando y restaurando su confort.
+
+          Tiene propiedades calmantes, reparadoras, antiinflamatorias y antimicrobianas. Es eficaz para calmar las
+          irritaciones de las pieles sensibles y reactivas, aliviando y restaurando su confort.
         </div>
-        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 4.png' />
-        <h4>ALPHA BISABOBOL</h4>
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 4.png' />
+        <h3>ALPHA BISABOBOL</h3>
       </div>
     </div>
 
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-         
-          Actúa como un verdadero agente nutritivo que proporciona elasticidad y consistencia a la piel, dejándola tersa y extremadamente suave. Tiene una función sebo reguladora ideal para pieles grasas o con tendencia acnéica.
+
+          Actúa como un verdadero agente nutritivo que proporciona elasticidad y consistencia a la piel, dejándola tersa
+          y extremadamente suave. Tiene una función sebo reguladora ideal para pieles grasas o con tendencia acnéica.
         </div>
-        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 5.png' />
-        <h4>AGUACATE</h4>
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 5.png' />
+        <h3>AGUACATE</h3>
       </div>
     </div>
 
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-         
-          Genera una acción antiinflamatoria, cicatrizante, bactericida y antimicótica. Te ayuda a luchar contra los radicales libres y regenera el tejido cutáneo.
+
+          Genera una acción antiinflamatoria, cicatrizante, bactericida y antimicótica. Te ayuda a luchar contra los
+          radicales libres y regenera el tejido cutáneo.
         </div>
-        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 6.png' />
-        <h4>ALOE VERA</h4>
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 6.png' />
+        <h3>ALOE VERA</h3>
       </div>
     </div>
 
-    </div>
   </div>
+</div>
 
-  <div class="container-fluid pd-top-bottom">
+<div class="container-fluid pd-top-bottom">
   <div class="row">
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-          
-          Posee propiedades antioxidantes protegiendo a tu piel de los radicales libres, contribuye a la producción de colágeno, ayuda a reducir los daños producidos en la exposición solar y favorece la eliminación de manchas.
+
+          Posee propiedades antioxidantes protegiendo a tu piel de los radicales libres, contribuye a la producción de
+          colágeno, ayuda a reducir los daños producidos en la exposición solar y favorece la eliminación de manchas.
         </div>
         <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1.png' />
-        <h4>VITAMINA C</h4>
+        <h3>VITAMINA C</h3>
       </div>
     </div>
 
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-          
-          Al activar la circulación facial ayuda a mejorar la elasticidad de tu piel, hidrata la epidermis y aumenta la renovación celular.
+
+          Al activar la circulación facial ayuda a mejorar la elasticidad de tu piel, hidrata la epidermis y aumenta la
+          renovación celular.
         </div>
-        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 8.png' />
-        <h4>GINGKO</h4>
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 8.png' />
+        <h3>GINGKO</h3>
       </div>
     </div>
 
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-          
-          Es un ingrediente imprescindible en la cosmética coreana por su capacidad para disimular las manchas, calmar las células cutáneas e igualar el tono de tu piel.
+
+          Es un ingrediente imprescindible en la cosmética coreana por su capacidad para disimular las manchas, calmar
+          las células cutáneas e igualar el tono de tu piel.
         </div>
-        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia.png' />
-        <h4>EXTRACTO DE REGALIZ</h4>
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia.png' />
+        <h3>EXTRACTO DE REGALIZ</h3>
       </div>
     </div>
 
     <div class="col-12 col-sm-12 col-md-3">
       <div class="div-imagen ingred">
         <div>
-         
-          Contribuye a combatir el envejecimiento por su acción frente a los radicales libres y te protege de la radicación UV  y de las agresiones oxidativas sobre tu piel.
+
+          Contribuye a combatir el envejecimiento por su acción frente a los radicales libres y te protege de la
+          radicación UV y de las agresiones oxidativas sobre tu piel.
         </div>
-        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 3.png' />
-        <h4>VITAMINA E</h4>
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 3.png' />
+        <h3>VITAMINA E</h3>
       </div>
     </div>
 
-    </div>
   </div>
+</div>
 
-  <div class="container-fluid pd-top-bottom">
-    <div class="row">
-      <div class="col-12 col-sm-12 col-md-3">
-        <div class="div-imagen ingred">
-          <div>
-            
-            Tiene un efecto refrescante, protector, suavizante y antiinflamatorio sobre tu piel.
-          </div>
-          <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 2.png' />
-          <h4>MIMOSA</h4>
+<div class="container-fluid pd-top-bottom">
+  <div class="row">
+    <div class="col-12 col-sm-12 col-md-3">
+      <div class="div-imagen ingred">
+        <div>
+
+          Tiene un efecto refrescante, protector, suavizante y antiinflamatorio sobre tu piel.
         </div>
-      </div>
-  
-      <div class="col-12 col-sm-12 col-md-3">
-        <div class="div-imagen ingred">
-          <div>
-            
-            Es ideal para el tratamiento de inflamaciones e irritaciones, sirve como descongestionante de la piel y detiene las hemorragias de pequeñas heridas.
-          </div>
-          <img class="desvanecer" src='../../../../assets/images/hamamelis_p.jpg' />
-          <h4>HAMMAMELIS</h4>
-        </div>
-      </div>
-  
-      
-  
+        <img class="desvanecer"
+          src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 2.png' />
+        <h3>MIMOSA</h3>
       </div>
     </div>
-  
+
+    <div class="col-12 col-sm-12 col-md-3">
+      <div class="div-imagen ingred">
+        <div>
+
+          Es ideal para el tratamiento de inflamaciones e irritaciones, sirve como descongestionante de la piel y
+          detiene las hemorragias de pequeñas heridas.
+        </div>
+        <img class="desvanecer" src='../../../../assets/images/hamamelis_p.jpg' />
+        <h3>HAMMAMELIS</h3>
+      </div>
+    </div>
+
+
+
+  </div>
+</div>
