--- a/src/app/pages/confirmacion/confirmacion.component.html
+++ b/src/app/pages/confirmacion/confirmacion.component.html
@@ -2,6 +2,6 @@
   <div class="container">
     <h1>¡Gracias por tu compra!</h1>
     <img src="../../../assets/images/logos/Logo_oscuro.png" alt="">
-    <button class="checkout-button">Volver a la shop</button>
+    <button routerLink="shop" class="checkout-button">Volver a la shop</button>
   </div>
 </div>
