--- a/src/app/pages/sobre-boxsr/conocenos/conocenos.component.scss
+++ b/src/app/pages/sobre-boxsr/conocenos/conocenos.component.scss
@@ -1,8 +1,6 @@
-
-  // global styles
+// global styles
 * {
   font-family: averta !important;
-
 }
 
 body {
@@ -19,13 +17,12 @@ body {
 //Slider
 .slider {
   margin-top: -70px;
-  height: 40vh;
-  background-image:url(../../../../assets/images/macro-shot-of-mans-eye-ES7VQPB.jpg);
+  height: 60vh;
+  background-image: url(../../../../assets/images/macro-shot-of-mans-eye-ES7VQPB.jpg);
   background-size: cover;
   background-position: center;
   display: flex;
   align-items: flex-end;
-  
 }
 
 .slider-text {
@@ -33,14 +30,14 @@ body {
   margin: 10px;
 
   h1 {
-    color: #4B4A4A;
+    color: white;
     font-size: 30px;
     font-weight: 700;
   }
   h2 {
     margin-bottom: 5px;
     margin-top: 5px;
-    color:#4B4A4A;
+    color: #4b4a4a;
   }
 
   button {
@@ -48,53 +45,49 @@ body {
   }
 }
 
-  body {
-    overflow-x: hidden;
-  }
-  
-  //Slider
+body {
+  overflow-x: hidden;
+}
 
-  //  .slider {
-  //   margin-top:-70px;
-  //   height: 36vh;
-  //   width: 100vh;
-  //   margin-top: 30px;
-  //   margin-bottom: 30px;
-    
-  //   background-image: url(../../../../assets/images/macro-shot-of-mans-eye-ES7VQPB.jpg);
-  //   background-size:cover;
-  //   background-position: center;
-  //   display: flex;
-  //   align-items: flex-end;
-  // }
-  // * {
-  //   font-family: averta !important;
-  //   color: #4B4A4A;
-  // }
-  .black{
-    font-weight: revert;
-  }
-  .italic{
-    font-style: italic;
-  }
-  .padding-top{
-    padding-top: 5%;
-   
-    padding-left: 12%;
-    padding-right: 12%;
-  }
-  .padding-bot{
-    // padding-top: 7%;
-    padding-bottom: 5%;
-    padding-left: 12%;
-    padding-right: 12%;
-  }
+//Slider
 
- 
-  .imagenEllas{
-    max-width: 100%;
-    width: 80%;
-  
-  }
+//  .slider {
+//   margin-top:-70px;
+//   height: 36vh;
+//   width: 100vh;
+//   margin-top: 30px;
+//   margin-bottom: 30px;
 
- 
+//   background-image: url(../../../../assets/images/macro-shot-of-mans-eye-ES7VQPB.jpg);
+//   background-size:cover;
+//   background-position: center;
+//   display: flex;
+//   align-items: flex-end;
+// }
+// * {
+//   font-family: averta !important;
+//   color: #4B4A4A;
+// }
+.black {
+  font-weight: revert;
+}
+.italic {
+  font-style: italic;
+}
+.padding-top {
+  padding-top: 5%;
+
+  padding-left: 12%;
+  padding-right: 12%;
+}
+.padding-bot {
+  // padding-top: 7%;
+  padding-bottom: 5%;
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
+.imagenEllas {
+  max-width: 100%;
+  width: 80%;
+}
