--- a/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.scss
+++ b/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.scss
@@ -1,64 +1,66 @@
-
 // global styles
 * {
-    font-family: averta !important;
-  }
-  
-  body {
-    overflow-x: hidden;
-  }
-  
+  font-family: averta !important;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 //imagen-texto over
 
 .div-imagen {
-    display:inline-block;
-    position:relative;
-    width: 118%;
-    font-size: 112%;
+  display: inline-block;
+  position: relative;
+  width: 118%;
+  font-size: 112%;
 }
-  
-  
-  .div-imagen > div {
-    position:absolute;
-    top:0;
-    left:0;
-    z-index:-1;
-    padding:10px;
-    margin:0;
-  }
-  
-  .desvanecer:hover {
-    opacity: 0.07;
-    -webkit-transition: opacity 500ms;
-    -moz-transition: opacity 500ms;
-    -o-transition: opacity 500ms;
-    -ms-transition: opacity 500ms;
-    transition: opacity 500ms;
-  }
-  //
-  .desvanecer{
-      border-radius: 30px;
-      width: 114%;
-  }
-  .black{
-    font-weight: revert;
-  }
-  .italic{
-    font-style: italic;
-  }
-  .padding{
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 5%;
-  }
-  .pd-top-bottom{
-    padding-top: 4%;
-    padding-bottom: 4%;
-    padding-left: 6%;
-    padding-right: 6%;
 
-  }
-  .ingred{
-    width: 73%;
-    font-size: 100%;
-  }
+.div-imagen > div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  padding: 10px;
+  margin: 0;
+}
+
+.desvanecer:hover {
+  opacity: 0.07;
+  -webkit-transition: opacity 500ms;
+  -moz-transition: opacity 500ms;
+  -o-transition: opacity 500ms;
+  -ms-transition: opacity 500ms;
+  transition: opacity 500ms;
+}
+//
+.desvanecer {
+  border-radius: 30px;
+  width: 114%;
+}
+.black {
+  font-weight: revert;
+}
+.italic {
+  font-style: italic;
+}
+.padding {
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 5%;
+}
+.pd-top-bottom {
+  padding-top: 4%;
+  padding-bottom: 4%;
+  padding-left: 6%;
+  padding-right: 6%;
+}
+.ingred {
+  width: 73%;
+  font-size: 100%;
+}
+
+h3 {
+  text-align: center;
+  font-weight: 600;
+}
