--- a/src/app/pages/checkout/checkout-resumen-pedido/checkout-resumen-pedido.component.scss
+++ b/src/app/pages/checkout/checkout-resumen-pedido/checkout-resumen-pedido.component.scss
@@ -78,3 +78,10 @@ ul {
   border-top: #4b4a4a 1px solid !important;
   padding: 16px;
 }
+
+img {
+  width: 40px;
+  height: 40px;
+  padding-left: 0px;
+  margin-right: 5px;
+}
