--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -48,7 +48,7 @@
 <div class="container-fluid section1">
     <div class="row">
         <div class="col-12 col-md-4 test" routerLink="/shop">
-            <button>TEST DE PIEL</button>
+            <button>CONSULTA</button>
         </div>
         <div class="col-12 col-md-4 muestras" routerLink="/muestras">
             <button>MUESTRAS</button>
@@ -65,15 +65,19 @@
         <div class="col-12 col-md-4 face1">
         </div>
         <div class="col-12 col-md-4 best-sellers">
-            <div class="container-fluid best-sellers-container">
-                <h2>
-                    BOX ANTIARRUGAS
-                </h2>
-                <h1 class="best">
-                    BEST SELLERS
-                </h1>
+            <div class="container-fluid">
                 <h2>
                     BOX GOOD FACE
+                </h2>
+            </div>
+            <div class="container-fluid best">
+                <h1>
+                    BEST SELLERS
+                </h1>
+            </div>
+            <div class="container-fluid">
+                <h2>
+                    BOX ANTIARRUGAS
                 </h2>
             </div>
         </div>
@@ -83,10 +87,10 @@
 </div>
 
 <!--ingredientes-->
-<div class="container-fluid section3">
+<div class="container-fluid section3" routerLink="/ingredientes">
     <div class="row">
         <div class="col">
-            <button>BUSCAMOS LOS INGREDIENTES CON LA MÁXIMA CALIDAD Y EFECTIVIDAD</button>
+            <button>INGREDIENTES DE MÁXIMA CALIDAD Y EFECTIVIDAD</button>
         </div>
     </div>
 </div>
@@ -94,7 +98,7 @@
 <!--consulta-->
 <div class="container-fluid section4">
     <div class="row">
-        <div class="col-12 col-md-4 text-col">
+        <div class="col-12 col-md-4 text-col" routerLink="/contacto">
             <div class="text-box">
                 <p>¿Necesitas ayuda?</p>
                 <h1><strong>Consulta gratuita con un experto de BOXSR</strong></h1>
