--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -227,13 +227,10 @@ button {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 
     padding: 0px;
 
-    .best-sellers-container {
-      padding: 0px;
-      text-align: center;
-    }
     .best {
       border: #4b4a4a 1px solid;
       width: 100%;
@@ -241,8 +238,17 @@ button {
       justify-content: center;
       text-align: center;
     }
+
+    .face2 {
+      min-height: 30vh !important;
+    }
+
+    h1 {
+      margin: 5px;
+    }
     h2 {
       font-size: 40px;
+      margin: 10px;
     }
   }
 }
@@ -323,8 +329,24 @@ button {
     }
   }
   .section2 {
+    height: auto;
+
     h2 {
-      font-size: 40px;
+      font-size: 30px !important;
+    }
+
+    h1 {
+      font-size: 20px;
+    }
+
+    .best-sellers {
+      max-height: 30vh;
+    }
+
+    .face1,
+    .face2,
+    .best-sellers {
+      height: 30vh;
     }
   }
   .section3 {
