--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,6 @@
         <a class="navbar-brand" routerLink="">
             <img src="../../../assets/images/logos/Logo_oscuro.png" width="120" alt="" loading="lazy">
         </a>
-        <a></a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -30,16 +29,16 @@
         </div>
         <div class="left">
             <a (click)="showCart.emit(true)">
-                <i class="fas fa-shopping-cart fa-lg"></i>
+                <i class="flaticon-shopping-cart"></i>
             </a>
             <a *ngIf="!isUserLoggedIn" (click)="showLogin.emit(true)">
-                <i class="fas fa-user fa-lg"></i>
+                <i class="flaticon-user"></i>
             </a>
             <a *ngIf="isUserLoggedIn" (click)="perfilUsuario.emit()">
-                <i class="fas fa-user fa-lg"></i>
+                <i class="flaticon-user"></i>
             </a>
             <a *ngIf="isUserLoggedIn" (click)="logOut()">
-                <i class="fas fa-sign-out-alt fa-lg"></i>
+                <i class="flaticon-logout"></i>
             </a>
         </div>
     </nav>
