--- a/src/assets/icons/font/flaticon.css
+++ b/src/assets/icons/font/flaticon.css
@@ -1,4 +1,4 @@
-	/*
+/*
   	Flaticon icon font: Flaticon
   	Creation date: 20/10/2020 11:10
   	*/
@@ -7,29 +7,43 @@
   font-family: "Flaticon";
   src: url("./Flaticon.eot");
   src: url("./Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("./Flaticon.woff2") format("woff2"),
-       url("./Flaticon.woff") format("woff"),
-       url("./Flaticon.ttf") format("truetype"),
-       url("./Flaticon.svg#Flaticon") format("svg");
+    url("./Flaticon.woff2") format("woff2"),
+    url("./Flaticon.woff") format("woff"),
+    url("./Flaticon.ttf") format("truetype"),
+    url("./Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "Flaticon";
     src: url("./Flaticon.svg#Flaticon") format("svg");
   }
 }
 
-[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
-[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
+[class^="flaticon-"]:before,
+[class*=" flaticon-"]:before,
+[class^="flaticon-"]:after,
+[class*=" flaticon-"]:after {
   font-family: Flaticon;
-        font-size: 20px;
-font-style: normal;
-margin-left: 20px;
+  font-size: 20px;
+  font-style: normal;
+  margin-left: 20px;
 }
 
-.flaticon-user:before { content: "\f100"; }
-.flaticon-shopping-cart:before { content: "\f101"; }
-.flaticon-logout:before { content: "\f102"; }
+.flaticon-user:before {
+  content: "\f100";
+  font-size: 30px;
+  margin-left: 10px;
+}
+.flaticon-shopping-cart:before {
+  content: "\f101";
+  font-size: 30px;
+  margin-left: 10px;
+}
+.flaticon-logout:before {
+  content: "\f102";
+  font-size: 30px;
+  margin-left: 10px;
+}
