--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -18,9 +18,9 @@
             </ul>
 
             <button (click)="checkOut()" *ngIf="this.user.usuario_id" (click)="cerrarCarrito2()"
-                class="checkout-button">Hacer pedido</button>
+                class="checkout-button">HACER PEDIDO</button>
             <button (click)="abrirLogin.emit(true)" (click)="cerrarCarrito2()" *ngIf="this.user.length === 0"
-                class="checkout-button">Inicia sesión para realizar tu compra</button>
+                class="checkout-button">INICIA SESIÓN HACER EL PEDIDO</button>
 
         </div>
     </div>
