--- a/src/app/admin/components/header-admin/header-admin.component.html
+++ b/src/app/admin/components/header-admin/header-admin.component.html
@@ -1,43 +1,38 @@
 <div class="container-fluid header sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler navbar" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" routerLink="/admin">
-          <img src="../../../assets/images/logos/Logo_oscuro.png" width="100" alt="" loading="lazy">
-      </a>
-      <a></a>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" routerLink="/admin/pedidos">PEDIDOS</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" routerLink="/admin/colecciones">COLECCIONES</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" routerLink="/admin/productos">PRODUCTOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/admin/inventario">INVENTARIO</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/admin/clientes">CLIENTES</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/admin/buzon"> BUZÓN CONTACTO</a>
-            </li>
-          </ul>
-      </div>
-      <div class="left">
-        <a>
-            <i class="fas fa-shopping-cart fa-lg"></i>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light background-navbar">
+        <button class="navbar-toggler navbar" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" routerLink="/admin">
+            <img src="../../../assets/images/logos/Logo_oscuro.png" width="120" alt="" loading="lazy">
         </a>
-        <a (click)="logOut()">
-          <i class="fas fa-sign-out-alt fa-lg"></i>
-      </a>
-      </div>
-  </nav>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin/pedidos">PEDIDOS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin/colecciones">COLECCIONES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin/productos">PRODUCTOS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin/inventario">INVENTARIO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin/clientes">CLIENTES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin/buzon"> BUZÓN CONTACTO</a>
+                </li>
+            </ul>
+        </div>
+        <div class="left">
+            <a (click)="logOut()">
+                <i class="flaticon-logout"></i>
+            </a>
+        </div>
+    </nav>
 </div>
-
