--- a/src/app/admin/pages/pedidos/resumen-pedidos/resumen-pedidos.component.html
+++ b/src/app/admin/pages/pedidos/resumen-pedidos/resumen-pedidos.component.html
@@ -13,7 +13,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Pedido_id</th>
         <td mat-cell *matCellDef="let row"> {{row.pedido_id}} </td>
       </ng-container>
-      
+
 
       <!-- nombre Column -->
       <ng-container matColumnDef="fecha">
@@ -42,7 +42,7 @@
       <ng-container matColumnDef="ver_detalles">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Ver detalle</th>
         <td mat-cell *matCellDef="let row">
-          <button (click)="detallePedido(row)">Ver detalle</button>
+          <button mat-raised-button (click)="detallePedido(row)">Ver detalle</button>
         </td>
 
       </ng-container>
@@ -54,7 +54,7 @@
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
     </table>
-   
+
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
