--- a/src/app/pages/shop/shop-list/shop-list.component.html
+++ b/src/app/pages/shop/shop-list/shop-list.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="row intro-text">
-        <div class="col-12">
+        <div class="col-12 consulta-top">
             <h3>Si aún no sabes que tipo que tipo de producto necesitas consulta con nuestro especialista</h3>
             <button class="añadir-carro" routerLink="/contacto">DESCUBRE AQUÍ COMO CUIDAR TU PIEL</button>
         </div>
@@ -31,6 +31,25 @@
 <div class="container-fluid cards-container">
     <!--row-->
     <div class="row">
+        <ng-container *ngFor="let coleccion of colecciones">
+            <div class="col-12 col-md-6 card-container">
+                <a [routerLink]="['/coleccion', coleccion.coleccion_id]" (click)="onVerColeccion(coleccion)">
+                    <div class="container-fluid card-img"
+                        [ngStyle]="{'background-image':'url(' + coleccion?.imagen_url + ')'}">
+                    </div>
+                    <div class="container-fluid card-text">
+                        <h2>{{ coleccion?.nombre }}</h2>
+                        <p>{{ coleccion?.descripcion_resumen }}</p>
+                        <h3><span class="precio-original">{{ coleccion?.precio_original }}€</span>
+                            {{ coleccion?.precio }}€</h3>
+                    </div>
+                </a>
+                <div class="container-fluid buttons-container">
+                    <button (click)="checkOut()">COMPRAR AHORA <strong> {{coleccion?.precio}}€ </strong></button>
+                    <button class="añadir-carro" (click)="AddAlCarrito(coleccion)">AÑADIR AL CARRO</button>
+                </div>
+            </div>
+        </ng-container>
         <ng-container *ngFor="let producto of productos">
             <div class="col-12 col-md-6 card-container">
                 <a [routerLink]="['/producto', producto.producto_id]" (click)="verProducto(producto)">
@@ -46,24 +65,6 @@
                 <div class="container-fluid buttons-container">
                     <button (click)="checkOut()">COMPRAR AHORA <strong> {{producto?.precio}}€ </strong></button>
                     <button class="añadir-carro" (click)="AddAlCarrito(producto)">AÑADIR AL CARRO</button>
-                </div>
-            </div>
-        </ng-container>
-        <ng-container *ngFor="let coleccion of colecciones">
-            <div class="col-12 col-md-6 card-container">
-                <a [routerLink]="['/coleccion', coleccion.coleccion_id]" (click)="onVerColeccion(coleccion)">
-                    <div class="container-fluid card-img"
-                        [ngStyle]="{'background-image':'url(' + coleccion?.imagen_url + ')'}">
-                    </div>
-                    <div class="container-fluid card-text">
-                        <h2>{{ coleccion?.nombre }}</h2>
-                        <p>{{ coleccion?.descripcion_resumen }}</p>
-                        <h3>{{ coleccion?.precio }}€</h3>
-                    </div>
-                </a>
-                <div class="container-fluid buttons-container">
-                    <button (click)="checkOut()">COMPRAR AHORA <strong> {{coleccion?.precio}}€ </strong></button>
-                    <button class="añadir-carro" (click)="AddAlCarrito(coleccion)">AÑADIR AL CARRO</button>
                 </div>
             </div>
         </ng-container>
