--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -13,7 +13,7 @@
                 </li>
 
                 <li class="list-group-item total">
-                    <span>Total: {{ carritoTotal }}€</span>
+                    <span>Total: {{ carritoTotal | number : '1.2-2' }}€</span>
                 </li>
             </ul>
 
