--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -303,6 +303,9 @@ button {
   .text-box {
     width: 80%;
     color: #4b4a4a;
+    button {
+      width: 100%;
+    }
   }
 
   .consulta-image {
