--- a/src/app/admin/pages/colecciones/modificar-coleccion/modificar-coleccion.component.html
+++ b/src/app/admin/pages/colecciones/modificar-coleccion/modificar-coleccion.component.html
@@ -49,7 +49,7 @@
     </div>
     <div class="form-group">
       <mat-form-field class="full-width">
-        <mat-label>Resumen de coleccion</mat-label>
+        <mat-label>Descripción de coleccion</mat-label>
         <textarea matInput formControlName="descripcion"
           [ngClass]="{ 'is-invalid': submitted && f.descripcion.errors }"></textarea>
         <div *ngIf="submitted && f.descripcion.errors" class="invalid-feedback">
